--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           margin: 20%;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           .ac p {
             margin-top: 30px;
           }
@@ -156,7 +156,7 @@
                           本作品為國立政治大學資訊科學所李蔡彥老師所開設的電腦動畫期末專案
                         </p>
                     </div>
-                    <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-3 text-center">
                       <img src="img/liu.jpg" alt="" class="img-circle" width="70%" style="margin:5% 15%"/>
                       <h3>
                         作者
@@ -165,7 +165,7 @@
                         劉義瑋
                       </p>
                     </div>
-                    <div class="col-lg-4 text-center">
+                    <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3 text-center">
                       <img src="img/li.jpg" alt="" class="img-circle" width="70%" style="margin:5% 15%"/>
                       <h3>
                         指導教授
@@ -256,7 +256,7 @@
             <div class="container-fluid">
                 <div class="row no-gutter">
                     <div class="col-lg-4 col-sm-6">
-                        <a href="" class="portfolio-box">
+                        <div class="portfolio-box">
                             <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -268,10 +268,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a href="" class="portfolio-box">
+                        <div class="portfolio-box">
                             <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -280,10 +280,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a href="" class="portfolio-box">
+                        <div class="portfolio-box">
                             <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -292,7 +292,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a href="" class="portfolio-box">
@@ -307,7 +307,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a href="" class="portfolio-box">
+                        <div class="portfolio-box">
                             <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -316,10 +316,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a href="" class="portfolio-box">
+                        <div class="portfolio-box">
                             <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -328,7 +328,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -399,10 +399,10 @@
                   </div>
                 </div>
                 <div class="row text-center">
-                  <div class="col-lg-4 col-lg-offset-2">
+                  <div class="col-md-4 col-md-offset-2 col-sm-6 col-sm-offset-3">
                     <img src="img/yt.jpg" alt="" class="img-thumbnail ac-img"/>
                   </div>
-                  <div class="col-lg-4 ac">
+                  <div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-3 ac">
                     <p>感謝黃彥庭提供劇情發想</p>
                   </div>
                 </div>
