--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     	<meta property="og:title" content="KUMAMON與禪師的智慧" />
     	<meta property="og:type" content="website" />
     	<meta property="og:url" content="http://blueswen.github.io/ca-final" />
-    	<meta property="og:image" content="img/ogimage.png" />
+    	<meta property="og:image" content="img/ogimg.png" />
     	<meta property="og:site_name" content="電腦動畫期末專案 — KUMAMON與禪師的智慧"/>
     	<meta property="og:description" content="一段充滿奮鬥與努力的勵志故事！"/>
       <title>Computer Animation Final Project</title>
